@@ -202,7 +202,6 @@ EOT;
 			
 			$name = $property->getName();
 			$methodName = 'set'.ucfirst($name);
-			$classHint = $this->getHint();
 			
 			if ($holder) {
 				return <<<EOT
@@ -219,16 +218,18 @@ public function {$methodName}({$property->getType()->getClassName()} \${$name})
 
 EOT;
 			} else {
+				$defaultValue = $property->isOptional() ? ' = null' : '';
+
 				if ($property->getFetchStrategyId() == FetchStrategy::LAZY) {
 					$method = <<<EOT
 
 /**
  * @return {$property->getClass()->getName()}
 **/
-public function {$methodName}({$this->className} \${$name})
+public function {$methodName}({$this->className} \${$name}{$defaultValue})
 {
 	\$this->{$name} = \${$name};
-	\$this->{$name}Id = \${$name}->getId();
+	\$this->{$name}Id = \${$name} ? \${$name}->getId() : null;
 
 	return \$this;
 }
@@ -236,7 +237,7 @@ public function {$methodName}({$this->className} \${$name})
 /**
  * @return {$property->getClass()->getName()}
 **/
-public function {$methodName}Id(\$id)
+public function {$methodName}Id(\$id{$defaultValue})
 {
 	\$this->{$name} = null;
 	\$this->{$name}Id = \$id;
@@ -251,7 +252,7 @@ EOT;
 /**
  * @return {$property->getClass()->getName()}
 **/
-public function {$methodName}({$this->className} \${$name})
+public function {$methodName}({$this->className} \${$name}{$defaultValue})
 {
 	\$this->{$name} = \${$name};
 
